ADDING REPOSIYTORY AND LOCAL DATASOURCE

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.example.creatuser">
 <uses-permission android:name="android.permission.INTERNET"/>
     <application
+        android:name=".di.App"
         android:allowBackup="true"
         android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher"
