--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'androidx.navigation.safeargs'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -63,4 +64,6 @@ dependencies {
 
     implementation "com.github.leonardoxh:retrofit2-livedata-adapter:1.1.2"
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation("androidx.room:room-runtime:2.4.2")
+    kapt("androidx.room:room-compiler:2.4.2")
 }
